# EnigmaChat

./: Cargo.toml  README.md
src/: crypto.rs  main.rs
src/api/: decrypt.rs  encrypt.rs  mod.rs  user_key.rs
src/crypto/: decryption.rs  encryption.rs
src/errors/: errors.rs
src/validators/: validation.rs
